[package]
name = "simple-pub-sub"
version = "0.1.0-rc1"
edition = "2021"
authors = ["girish946 <girish946@gmail.com>"]
license = "MIT"
description = "simple message broker"
readme = "README.md"
keywords = ["simple", "message", "broker", "pub-sub"]
repository = "https://github.com/girish946/simple-pub-sub"
categories = ["command-line-interface", "command-line-utilities", "message-bus"]
exclude = ["client.py"]

[dependencies]
tokio = { version = "1", features = ["full", "tracing"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10.1"
log = "0.4.20"
uuid = {version= "1.6.1", features = [ "v4"]}
clap = { version = "4.4.11", features = ["derive", "cargo"] }
