[package]
name = "simple-pub-sub"
version = "0.1.2"
edition = "2021"
authors = ["Girish Joshi <mail@girishjoshi.io>"]
license = "MIT"
description = "simple message broker"
readme = "README.md"
keywords = ["simple", "message", "broker", "pub-sub"]
repository = "https://github.com/girish946/simple-pub-sub"
categories = ["command-line-interface", "command-line-utilities", "message-bus"]
exclude = ["client.py"]

[lib]
name = "simple_pub_sub"
path = "src/lib.rs"

[[bin]]
name = "simple-pub-sub"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full", "tracing"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10.1"
log = "0.4.20"
uuid = { version = "1.6.1", features = ["v4"] }
clap = { version = "4.4.11", features = ["derive", "cargo"] }
mio = "0.8.11"
clap_mangen = "0.2.20"

#[build-dependencies]

clap_complete = "4.5.2"
