[package]
name = "simple-pub-sub"
version = "0.1.7"
edition = "2021"
authors = ["Girish Joshi <mail@girishjoshi.io>"]
license = "MIT"
description = "simple message broker"
readme = "README.md"
keywords = ["simple", "message", "broker", "pub-sub"]
repository = "https://github.com/girish946/simple-pub-sub"
categories = ["command-line-interface", "command-line-utilities"]
exclude = ["client.py"]
build = "build.rs"

[lib]
name = "simple_pub_sub"
path = "src/lib.rs"

[[bin]]
name = "simple-pub-sub"
path = "src/main.rs"


[workspace]
members = ["simple-pub-sub-message"]

[dependencies]
simple-pub-sub-message = { path = "./simple-pub-sub-message/", version = "0.1.7" }
tokio = { version = "1", features = ["full", "tracing"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11.3"
log = "0.4.20"
uuid = { version = "1.6.1", features = ["v4"] }
mio = "1.0.3"
clap = { version = "4.4.11", features = ["derive", "cargo"] }
tokio-native-tls = "0.3"
native-tls = "0.2"
tokio-stream = "0.1"
openssl = "0.10.66"
anyhow = "1.0.97"
thiserror = "2.0.12"
clap_mangen = "0.2.20"
clap_complete = "4.5.2"

[build-dependencies]
clap = { version = "4.4.11", features = ["derive", "cargo"] }
clap_mangen = "0.2.20"
clap_complete = "4.5.2"
