[package]
name = "simple-pub-sub-message"
edition = "2021"
version = "0.1.6"
authors = ["Girish Joshi <mail@girishjoshi.io>"]
license = "MIT"
description = "message format for the simple-pub-sub"
readme = "README.md"
keywords = ["simple", "message", "broker", "pub-sub"]
repository = "https://github.com/girish946/simple-pub-sub"
categories = ["command-line-interface", "command-line-utilities", "message-bus"]

[dependencies]
thiserror = "2.0.12"
anyhow = "1.0.97"
tokio = { version = "1", features = ["full", "tracing"] }
log = "0.4.26"

[dev-dependencies]
uuid = { version = "1.6.1", features = ["v4"] }
env_logger = "0.11.3"
